--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-spring.application.name=task-manager
 
+debug=true
+logging.level.org.springframework.boot.autoconfigure=DEBUG
+logging.level.org.springframework=INFO
+
+spring.application.name=task-manager
 
 spring.datasource.url=jdbc:h2:file:./data/taskdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Console H2 pour voir la base
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
