--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-debug=true
-logging.level.org.springframework.boot.autoconfigure=DEBUG
-logging.level.org.springframework=INFO
+debug=false
+logging.level.org.springframework.boot.autoconfigure=WARN
+logging.level.org.springframework=WARN
 
 spring.application.name=task-manager
 
@@ -16,3 +16,20 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+
+
+# --- Broker ---
+spring.kafka.bootstrap-servers=localhost:9092
+
+
+
+# Lire depuis le début s'il n'y a pas d'offset pour ce group
+spring.kafka.consumer.auto-offset-reset=earliest
+
+# Logs utiles
+logging.level.org.springframework.kafka=WARN
+logging.level.org.springframework.kafka.listener=WARN
+logging.level.org.apache.kafka.clients.consumer=WARN
+
