--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -35,11 +35,17 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-devkit/core": "^21.1.1",
+    "@angular-devkit/schematics": "^21.1.1",
     "@angular/build": "^21.1.1",
     "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^21.1.0",
     "@angular/material": "^21.1.1",
+    "@nx/angular": "22.5.0",
+    "@nx/workspace": "22.5.0",
+    "@schematics/angular": "^21.1.1",
     "jsdom": "^27.1.0",
+    "nx": "22.5.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
