--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,18 @@
-
 debug=false
 logging.level.org.springframework.boot.autoconfigure=WARN
 logging.level.org.springframework=WARN
-
-spring.application.name=task-manager
-
+spring.application.name=tasks-manager
 spring.datasource.url=jdbc:h2:file:./data/taskdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-
-
-
-# --- Broker ---
 spring.kafka.bootstrap-servers=localhost:9092
-
-
-
-# Lire depuis le début s'il n'y a pas d'offset pour ce group
 spring.kafka.consumer.auto-offset-reset=earliest
-
-# Logs utiles
 logging.level.org.springframework.kafka=WARN
 logging.level.org.springframework.kafka.listener=WARN
 logging.level.org.apache.kafka.clients.consumer=WARN
