--- a/front/.vscode/settings.json
+++ b/front/.vscode/settings.json
@@ -5,5 +5,18 @@
   "editor.formatOnSave": true, // optional
   "editor.formatOnSaveMode": "file", // required to format on save
   "files.autoSave": "onFocusChange", // optional but recommended
-  "vs-code-prettier-eslint.prettierLast": false // set as "true" to run 'prettier' last not first
+  "vs-code-prettier-eslint.prettierLast": false,
+
+  "typescript.format.enable": false,
+  "javascript.format.enable": false,
+  "html.format.enable": false,
+  "json.format.enable": false,
+
+  "terminal.integrated.profiles.windows": {
+    "Git Bash": {
+      "path": "C:\\Users\\antoine.bourgeolet\\AppData\\Local\\Programs\\Git\\cmd\\git.exe",
+      "args": ["--login", "-i"]
+    }
+  },
+  "terminal.integrated.defaultProfile.windows": "Git Bash"
 }
