--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "prettier": {
     "printWidth": 100,
@@ -41,11 +43,11 @@
     "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^21.1.0",
     "@angular/material": "^21.1.1",
-    "@nx/angular": "22.5.0",
-    "@nx/workspace": "22.5.0",
     "@schematics/angular": "^21.1.1",
     "jsdom": "^27.1.0",
-    "nx": "22.5.0",
+    "nx": "^21.6.10",
+    "prettier": "^3.8.1",
+    "prettier-plugin-organize-imports": "^4.3.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
