--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -42,7 +42,7 @@ jobs:
         working-directory: frontend
         run: |
           npm ci
-          npm run test -- --watch=false --code-coverage
+          npm run test -- --watch=false
           npm run build -- --configuration production
 
       - name: SonarCloud Scan
