--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -41,12 +41,12 @@ jobs:
       - name: Build Frontend (Angular)
         working-directory: frontend
         run: |
-          npm ci
+          npm ci --ignore-scripts
           npm run test -- --watch=false
           npm run build -- --configuration production
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
+        uses: SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
