--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,11 @@
 sonar.projectKey=AntoineBourgeolet_task-manager
 sonar.organization=antoinebourgeolet
 sonar.host.url=https://sonarcloud.io
-sonar.sources=front/src,back/src/main
+sonar.sources=frontend/src,backend/src/main
 
-sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/target/**,back/src/test/**
+sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/target/**,backend/src/test/**
 
-sonar.coverage.jacoco.xmlReportPaths=back/target/site/jacoco/jacoco.xml
+sonar.coverage.jacoco.xmlReportPaths=backend/target/site/jacoco/jacoco.xml
 sonar.coverage.exclusions=\
   **/config/**,\
   **/kafka/outbox/**,\
@@ -19,7 +19,7 @@ sonar.coverage.exclusions=\
   **/generated-test-sources/**
 
 
-sonar.java.binaries=back/target/classes
-sonar.java.test.binaries=back/target/test-classes
+sonar.java.binaries=backend/target/classes
+sonar.java.test.binaries=backend/target/test-classes
 
-sonar.typescript.tsconfigPath=front/tsconfig.json
+sonar.typescript.tsconfigPath=frontend/tsconfig.json
