--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -100,7 +100,7 @@ jobs:
           path: .
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarsource-scan-action@v2
+        uses:  SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
