--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -91,13 +91,14 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: backend-artifacts
-          path: .
+          path: backend
+
 
       - name: Download frontend artifacts
         uses: actions/download-artifact@v4
         with:
           name: frontend-artifacts
-          path: .
+          path: frontend
 
       - name: SonarCloud Scan
         uses:  SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
