fix: task-manager#3 - Antoine - artifacts download

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,3 +23,4 @@ sonar.java.binaries=backend/target/classes
 sonar.java.test.binaries=backend/target/test-classes
 
 sonar.typescript.tsconfigPath=frontend/tsconfig.json
+sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
