--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -6,6 +6,13 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   backend:
     permissions:
@@ -37,6 +44,7 @@ jobs:
           name: backend-artifacts
           path: |
             backend/target/**
+            backend/target/site/jacoco/**
           if-no-files-found: error
 
   frontend:
@@ -76,7 +84,8 @@ jobs:
   sonar:
     permissions:
       contents: read
-      pull-requests: read
+      pull-requests: write
+      checks: write
     name: SonarCloud Scan
     runs-on: ubuntu-latest
     needs: [ backend, frontend ]
