fix: task-manager#3 - Antoine - artifacts download

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,8 +19,8 @@ sonar.coverage.exclusions=\
   **/generated-test-sources/**
 
 
-sonar.java.binaries=backend/target/classes
-sonar.java.test.binaries=backend/target/test-classes
+sonar.java.binaries=backend/target/classes,backend/target/*/classes,backend/target/*.jar,backend/target/**/*.jar
+sonar.java.test.binaries=backend/target/test-classes,backend/target/*/test-classes
 
 sonar.typescript.tsconfigPath=frontend/tsconfig.json
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
