--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -6,21 +6,13 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   backend:
+    name: Build Backend (Maven)
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: read
-    name: Build Backend (Maven)
-    runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,20 +30,12 @@ jobs:
         working-directory: backend
         run: mvn -B -DskipITs clean verify
 
-      - name: Debug — list backend/target after build
-        working-directory: backend
-        run: |
-          echo "PWD: $(pwd)"
-          ls -la target || true
-          find target -maxdepth 6 -type f -print || true
-
       - name: Upload backend artifacts
         uses: actions/upload-artifact@v4
         with:
           name: backend-artifacts
           path: |
-            backend/target
-            backend/target/site/jacoco
+            backend/target/**
           if-no-files-found: error
 
   frontend:
@@ -89,26 +73,25 @@ jobs:
           if-no-files-found: ignore
 
   sonar:
-    permissions:
-      contents: read
-      pull-requests: write
-      checks: write
     name: SonarCloud Scan
     runs-on: ubuntu-latest
     needs: [ backend, frontend ]
-
+    permissions:
+      contents: read
+      pull-requests: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # IMPORTANT: télécharger à la racine pour obtenir backend/target/**
       - name: Download backend artifacts
         uses: actions/download-artifact@v4
         with:
           name: backend-artifacts
           path: .
-
 
       - name: Download frontend artifacts
         uses: actions/download-artifact@v4
@@ -116,21 +99,8 @@ jobs:
           name: frontend-artifacts
           path: .
 
-      - name: Debug — list backend target contents
-        run: |
-          echo "Workspace: $GITHUB_WORKSPACE"
-          echo "PWD: $(pwd)"
-          echo "Listing backend directory:"
-          ls -la backend || true
-          echo "Listing backend/target (top level):"
-          ls -la backend/target || true
-          echo "Find class files and jars under backend/target:" 
-          find backend/target -maxdepth 6 -type f \( -name "*.class" -o -name "*.jar" \) -print || true
-          echo "Print sonar-project.properties contents:" 
-          sed -n '1,200p' sonar-project.properties || true
-
       - name: SonarCloud Scan
-        uses:  SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
+        uses: SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
