--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build Backend (Maven)
         working-directory: backend
-        run: mvn -B -DskipITs clean verify
+        run: mvn -B -DskipITs clean package verify
 
       - name: Upload backend artifacts
         uses: actions/upload-artifact@v4
