--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: backend-artifacts
-          path: backend/target/**
+          path: backend/**
           if-no-files-found: error
 
   frontend:
@@ -67,8 +67,7 @@ jobs:
         with:
           name: frontend-artifacts
           path: |
-            frontend/dist/**
-            frontend/coverage/**
+            frontend/**
           if-no-files-found: ignore
 
   sonar:
