--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,6 +21,8 @@ sonar.coverage.exclusions=\
 
 sonar.java.binaries=backend/target/classes
 sonar.java.test.binaries=backend/target/test-classes,backend/target/*/test-classes
+sonar.java.libraries=backend/target/dependency/*.jar
+
 
 sonar.typescript.tsconfigPath=frontend/tsconfig.json
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
