--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -50,9 +50,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.kafka</groupId>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-kafka</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>org.jetbrains</groupId>
