--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,12 +28,12 @@ jobs:
 
       - name: Build Backend (Maven)
         working-directory: backend
-        run: mvn -B -DskipITs clean install -pl backend/api-tag -am
+        run: mvn -B -DskipITs clean install -pl api-task -am
 
       
       - name: Copy Maven dependencies
         working-directory: backend
-        run: mvn -B -DincludeScope=compile -pl backend/api-task dependency:copy-dependencies -DoutputDirectory=backend/api-task/target/dependency
+        run: mvn -B -DincludeScope=compile -pl api-task dependency:copy-dependencies -DoutputDirectory=api-task/target/dependency
 
 
       - name: Upload backend artifacts
