feat:task-manager#7 - Antoine - migration openapi

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,5 +18,11 @@ sonar.coverage.exclusions=\
   **/generated-sources/**,\
   **/generated-test-sources/**
 
+
+sonar.java.binaries=backend/application/target/classes
+sonar.java.test.binaries=backend/application/target/test-classes,backend/application/target/*/test-classes
+sonar.java.libraries=backend/application/target/dependency/*.jar
+
+
 sonar.typescript.tsconfigPath=frontend/tsconfig.json
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
