feat:task-manager#7 - Antoine - migration openapi

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.sources=frontend/src,backend/application/src/main
 
 sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/target/**,backend/application/src/test/**
 
-sonar.coverage.jacoco.xmlReportPaths=backend/application/target/site/jacoco/jacoco.xml
+sonar.coverage.jacoco.xmlReportPaths=backend/application/ target/site/jacoco/jacoco.xml
 sonar.coverage.exclusions=\
   **/config/**,\
   **/kafka/outbox/**,\
