test: task-manager#7 - Antoine - Ajout des test manquant sur back

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/target/**,backend/
 
 sonar.coverage.jacoco.xmlReportPaths=backend/application/ target/site/jacoco/jacoco.xml
 sonar.coverage.exclusions=\
+  frontend/**,\
   **/config/**,\
   **/kafka/outbox/**,\
   **/dto/**,\
