--- a/backend/application/pom.xml
+++ b/backend/application/pom.xml
@@ -33,8 +33,19 @@
             <artifactId>api-task</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-        <!-- Tes deps actuelles -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -117,7 +128,6 @@
                 </configuration>
             </plugin>
 
-            <!-- JaCoCo (reprend ta config) -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -131,8 +141,9 @@
                         <exclude>**/dto/**</exclude>
                         <exclude>**/mapper/**</exclude>
                         <exclude>**/exception/**</exclude>
-                        <exclude>**/model/**</exclude>
                         <exclude>**/*Application.class</exclude>
+                        <exclude>**/entity/**</exclude>
+
                     </excludes>
                 </configuration>
                 <executions>
