fix: task-manager#10 - Antoine - Remplacer ObjectMapper par JsonMapper

--- a/backend/application/src/main/resources/application.properties
+++ b/backend/application/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.kafka.consumer.auto-offset-reset=earliest
 logging.level.org.springframework.kafka=WARN
 logging.level.org.springframework.kafka.listener=WARN
 logging.level.org.apache.kafka.clients.consumer=WARN
+springdoc.swagger-ui.path=/swagger
+
+
 
